工程包含目录和依赖库调整
使用PCL_ROOT代替本地路径，解决不同电脑上协同开发绝对路径不同的问题

--- a/RealTimeRobot/RealTimeRobot.vcxproj.filters
+++ b/RealTimeRobot/RealTimeRobot.vcxproj.filters
@@ -24,6 +24,15 @@
     <ClInclude Include="targetver.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="feature.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="model_point.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="scan_point.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
