--- a/RealTimeRobot/RealTimeRobot.vcxproj.filters
+++ b/RealTimeRobot/RealTimeRobot.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="scan_point.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="matching.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
