Debug及代码调整
解决现有程序中存在的一系列语法及定义问题，新建key_point 类，提取出了keypoint定义。建议组员一个文件中不要写两个类定义。

--- a/RealTimeRobot/RealTimeRobot.vcxproj
+++ b/RealTimeRobot/RealTimeRobot.vcxproj
@@ -155,6 +155,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="feature.h" />
+    <ClInclude Include="key_point.h" />
     <ClInclude Include="matching.h" />
     <ClInclude Include="model_point.h" />
     <ClInclude Include="scan_point.h" />
