--- a/RealTimeRobot/RealTimeRobot.vcxproj.filters
+++ b/RealTimeRobot/RealTimeRobot.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="matching.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="key_point.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
